[package]
name = "mullvad-serverlist-ping"
version = "0.2.0"
authors = ["alukard"]
edition = "2018"

[dependencies]
futures = "0.3.12"
num = "0.3.1"
num-traits = "0.2.14"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.123"
serde_derive = "1.0.123"
serde_json = "1.0.61"
structopt = "0.3.21"
tokio = { version = "1.1.0", features = ["rt-multi-thread", "macros"] }
winping = "0.10.1"
